# Kanban

./: .gitignore  README.md  RELATORIO.md  elm.json
api/app/: Main.hs  kanban.json
backend/: Main.hs  api.cabal  kanban.cabal  kanban.json  package.yaml
kanban/src/: Main.elm  Utils.elm  main.css
src/: Main.elm  main.css
