name:          kanban
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          kanban
    hs-source-dirs: .
    main-is:        Main.hs
    build-depends:  base >= 4 && < 5
                  , aeson
                  , bytestring
                  , scotty
                  , transformers
                  , wai-cors
                  , strict